# http_requester

./: .bumpversion.cfg  pyproject.toml
http_requester/: creds.py  requester.py
tests/: test_http_requester.py
