[tool.poetry]
name = "http_requester"
version = "1.0.3"
description = "Simple interface for building HTTP API requests."
authors = ["Ryan O'Rourke <ryan.orourke@welocalize.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncio = "^3.4.3"
aiohttp = "^3.6.2"
nest_asyncio = "^1.4.0"
requests = "^2.24.0"
pydantic = "^1.6.1"
yarl = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
